fix layout on mobile devices

--- a/cookowly-frontend/public/styles/globals.css
+++ b/cookowly-frontend/public/styles/globals.css
@@ -55,5 +55,6 @@
   }
 
   .app-layout{
+    width: 100%;
     max-width: min(100%, 1920px);
   }
